fix: enhance ticket row styles for improved readability and emphasis

--- a/src/style/Style-ventas.css
+++ b/src/style/Style-ventas.css
@@ -425,9 +425,10 @@ background-color: red; */
 .ticket-row {
   display: flex;
   justify-content: space-between;
-  font-size: 1rem;
-  padding: 0.4rem 0;
+  font-size: 1.3rem;
+  padding: 0.5rem 0;
   color: var(--font-color);
+  font-weight: 500;
 }
 
 /* separador */
@@ -437,10 +438,10 @@ background-color: red; */
 
 /* total destacado */
 .ticket-row.total {
-  font-size: 2rem;
-  font-weight: 600;
+  font-size: 3rem;
+  font-weight: 700;
   /* color: #5a68e6; */
-  padding-top: 0.8rem;
+  padding-top: 1rem;
 }
 
 /* botones abajo */
@@ -510,13 +511,14 @@ background-color: red; */
   .item-main {
     display: flex;
     font-weight: bold;
+    font-size: 16px;
   }
 
   .item-prices {
     display: flex;
     justify-content: space-between;
     padding-left: 20px;
-    font-size: 11px;
+    font-size: 14px;
   }
 
   .ticket-footer {
@@ -530,9 +532,9 @@ background-color: red; */
   }
 
   .footer-row.total {
-    font-size: 14px;
+    font-size: 22px;
     font-weight: bold;
-    border-top: 1px solid #000;
+    border-top: 2px solid #000;
     padding-top: 5px;
   }
 
